--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
         <div class="blockRow">
             <h1>2048</h1>
 
-            <div class="blockRow">
-                <h2>20</h2>
-                <h2>48</h2>
-            </div>
+            <h2 id="score">Score: 0</h2>
+            
 
         </div> 
         <div class="blockRow">
@@ -34,6 +32,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="script2048.js"></script>
+    <script src="script2.js"></script>
 
 </body>
 
