--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <div class="jeu2048">
 
+        <!--
         <div class="blockRow">
             <h1>2048</h1>
 
@@ -26,10 +27,20 @@
             <h1>2048</h1>
             <button id="newGame" onclick="restartGame()">New Game</button>
         </div>  
+        -->
+        <div class="blockATH">
+            
+            <h2 id="scoree">Best Score: 0</h2>
+            <h2 id="score">Score: 0</h2>
+
+            <button id="newGame" onclick="restartGame()">New Game</button>
+        </div>
 
         <canvas id="board"></canvas>
+
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="script2048.js"></script>
     <script src="script2.js"></script>
